--- a/c/test/Makefile
+++ b/c/test/Makefile
@@ -85,11 +85,12 @@ dep:
 	makedepend -Y -p"$(OUTPUT_DIR)/" $(INCLUDE_FLAGS)  -- $(TEST_SOURCES)
 # DO NOT DELETE
 
-../bld/./ArrayTests.o: ../include/mangopub.h ../include/marraylist.h
-../bld/./ArrayTests.o: ../include/mlist.h ../include/mcollection.h
+../bld/./ArrayTests.o: ../include/mangopub.h ../include/mrawarray.h
 ../bld/./ArrayTests.o: ../include/mobject.h ../include/mfwddefs.h
-../bld/./ArrayTests.o: ../include/mmemutils.h ../include/mbintree.h
-../bld/./ArrayTests.o: ../include/mclasses.h ../include/merror.h
+../bld/./ArrayTests.o: ../include/mmemutils.h ../include/mrawlist.h
+../bld/./ArrayTests.o: ../include/marraylist.h ../include/mlist.h
+../bld/./ArrayTests.o: ../include/mbintree.h ../include/mclasses.h
+../bld/./ArrayTests.o: ../include/mcollection.h ../include/merror.h
 ../bld/./ArrayTests.o: ../include/mfilter.h ../include/mvar.h
 ../bld/./ArrayTests.o: ../include/mstring.h ../include/mfilterlibrary.h
 ../bld/./ArrayTests.o: ../include/mfilternode.h ../include/mfreetext.h
@@ -108,11 +109,12 @@ dep:
 ../bld/./ArrayTests.o: ../include/mtokenlists.h ../include/mutils.h
 ../bld/./ArrayTests.o: ../include/mvarlibrary.h ../include/mvarnode.h
 ../bld/./ArrayTests.o: ../include/mvarresolver.h
-../bld/./BinTreeTests.o: ../include/mangopub.h ../include/marraylist.h
-../bld/./BinTreeTests.o: ../include/mlist.h ../include/mcollection.h
+../bld/./BinTreeTests.o: ../include/mangopub.h ../include/mrawarray.h
 ../bld/./BinTreeTests.o: ../include/mobject.h ../include/mfwddefs.h
-../bld/./BinTreeTests.o: ../include/mmemutils.h ../include/mbintree.h
-../bld/./BinTreeTests.o: ../include/mclasses.h ../include/merror.h
+../bld/./BinTreeTests.o: ../include/mmemutils.h ../include/mrawlist.h
+../bld/./BinTreeTests.o: ../include/marraylist.h ../include/mlist.h
+../bld/./BinTreeTests.o: ../include/mbintree.h ../include/mclasses.h
+../bld/./BinTreeTests.o: ../include/mcollection.h ../include/merror.h
 ../bld/./BinTreeTests.o: ../include/mfilter.h ../include/mvar.h
 ../bld/./BinTreeTests.o: ../include/mstring.h ../include/mfilterlibrary.h
 ../bld/./BinTreeTests.o: ../include/mfilternode.h ../include/mfreetext.h
@@ -131,11 +133,12 @@ dep:
 ../bld/./BinTreeTests.o: ../include/mtokenlists.h ../include/mutils.h
 ../bld/./BinTreeTests.o: ../include/mvarlibrary.h ../include/mvarnode.h
 ../bld/./BinTreeTests.o: ../include/mvarresolver.h
-../bld/./ListTests.o: ../include/mangopub.h ../include/marraylist.h
-../bld/./ListTests.o: ../include/mlist.h ../include/mcollection.h
+../bld/./ListTests.o: ../include/mangopub.h ../include/mrawarray.h
 ../bld/./ListTests.o: ../include/mobject.h ../include/mfwddefs.h
-../bld/./ListTests.o: ../include/mmemutils.h ../include/mbintree.h
-../bld/./ListTests.o: ../include/mclasses.h ../include/merror.h
+../bld/./ListTests.o: ../include/mmemutils.h ../include/mrawlist.h
+../bld/./ListTests.o: ../include/marraylist.h ../include/mlist.h
+../bld/./ListTests.o: ../include/mbintree.h ../include/mclasses.h
+../bld/./ListTests.o: ../include/mcollection.h ../include/merror.h
 ../bld/./ListTests.o: ../include/mfilter.h ../include/mvar.h
 ../bld/./ListTests.o: ../include/mstring.h ../include/mfilterlibrary.h
 ../bld/./ListTests.o: ../include/mfilternode.h ../include/mfreetext.h
@@ -155,11 +158,12 @@ dep:
 ../bld/./ListTests.o: ../include/mvarresolver.h ../include/ext/mangoextpub.h
 ../bld/./ListTests.o: ../include/ext/mfortag.h stlinputsource.h
 ../bld/./ListTests.o: ../include/maddfilter.h
-../bld/./ObjectTests.o: ../include/mangopub.h ../include/marraylist.h
-../bld/./ObjectTests.o: ../include/mlist.h ../include/mcollection.h
+../bld/./ObjectTests.o: ../include/mangopub.h ../include/mrawarray.h
 ../bld/./ObjectTests.o: ../include/mobject.h ../include/mfwddefs.h
-../bld/./ObjectTests.o: ../include/mmemutils.h ../include/mbintree.h
-../bld/./ObjectTests.o: ../include/mclasses.h ../include/merror.h
+../bld/./ObjectTests.o: ../include/mmemutils.h ../include/mrawlist.h
+../bld/./ObjectTests.o: ../include/marraylist.h ../include/mlist.h
+../bld/./ObjectTests.o: ../include/mbintree.h ../include/mclasses.h
+../bld/./ObjectTests.o: ../include/mcollection.h ../include/merror.h
 ../bld/./ObjectTests.o: ../include/mfilter.h ../include/mvar.h
 ../bld/./ObjectTests.o: ../include/mstring.h ../include/mfilterlibrary.h
 ../bld/./ObjectTests.o: ../include/mfilternode.h ../include/mfreetext.h
@@ -178,11 +182,12 @@ dep:
 ../bld/./ObjectTests.o: ../include/mtokenlists.h ../include/mutils.h
 ../bld/./ObjectTests.o: ../include/mvarlibrary.h ../include/mvarnode.h
 ../bld/./ObjectTests.o: ../include/mvarresolver.h stlinputsource.h
-../bld/./ParserTests.o: ../include/mangopub.h ../include/marraylist.h
-../bld/./ParserTests.o: ../include/mlist.h ../include/mcollection.h
+../bld/./ParserTests.o: ../include/mangopub.h ../include/mrawarray.h
 ../bld/./ParserTests.o: ../include/mobject.h ../include/mfwddefs.h
-../bld/./ParserTests.o: ../include/mmemutils.h ../include/mbintree.h
-../bld/./ParserTests.o: ../include/mclasses.h ../include/merror.h
+../bld/./ParserTests.o: ../include/mmemutils.h ../include/mrawlist.h
+../bld/./ParserTests.o: ../include/marraylist.h ../include/mlist.h
+../bld/./ParserTests.o: ../include/mbintree.h ../include/mclasses.h
+../bld/./ParserTests.o: ../include/mcollection.h ../include/merror.h
 ../bld/./ParserTests.o: ../include/mfilter.h ../include/mvar.h
 ../bld/./ParserTests.o: ../include/mstring.h ../include/mfilterlibrary.h
 ../bld/./ParserTests.o: ../include/mfilternode.h ../include/mfreetext.h
@@ -203,11 +208,12 @@ dep:
 ../bld/./ParserTests.o: ../include/mvarresolver.h
 ../bld/./ParserTests.o: ../include/ext/mangoextpub.h ../include/ext/mfortag.h
 ../bld/./ParserTests.o: stlinputsource.h ../include/maddfilter.h
-../bld/./ResolverTests.o: ../include/mangopub.h ../include/marraylist.h
-../bld/./ResolverTests.o: ../include/mlist.h ../include/mcollection.h
+../bld/./ResolverTests.o: ../include/mangopub.h ../include/mrawarray.h
 ../bld/./ResolverTests.o: ../include/mobject.h ../include/mfwddefs.h
-../bld/./ResolverTests.o: ../include/mmemutils.h ../include/mbintree.h
-../bld/./ResolverTests.o: ../include/mclasses.h ../include/merror.h
+../bld/./ResolverTests.o: ../include/mmemutils.h ../include/mrawlist.h
+../bld/./ResolverTests.o: ../include/marraylist.h ../include/mlist.h
+../bld/./ResolverTests.o: ../include/mbintree.h ../include/mclasses.h
+../bld/./ResolverTests.o: ../include/mcollection.h ../include/merror.h
 ../bld/./ResolverTests.o: ../include/mfilter.h ../include/mvar.h
 ../bld/./ResolverTests.o: ../include/mstring.h ../include/mfilterlibrary.h
 ../bld/./ResolverTests.o: ../include/mfilternode.h ../include/mfreetext.h
@@ -229,10 +235,11 @@ dep:
 ../bld/./ResolverTests.o: ../include/mvarlibrary.h ../include/mvarnode.h
 ../bld/./ResolverTests.o: ../include/mvarresolver.h stlinputsource.h
 ../bld/./stlinputsource.o: stlinputsource.h ../include/mangopub.h
-../bld/./stlinputsource.o: ../include/marraylist.h ../include/mlist.h
-../bld/./stlinputsource.o: ../include/mcollection.h ../include/mobject.h
+../bld/./stlinputsource.o: ../include/mrawarray.h ../include/mobject.h
 ../bld/./stlinputsource.o: ../include/mfwddefs.h ../include/mmemutils.h
-../bld/./stlinputsource.o: ../include/mbintree.h ../include/mclasses.h
+../bld/./stlinputsource.o: ../include/mrawlist.h ../include/marraylist.h
+../bld/./stlinputsource.o: ../include/mlist.h ../include/mbintree.h
+../bld/./stlinputsource.o: ../include/mclasses.h ../include/mcollection.h
 ../bld/./stlinputsource.o: ../include/merror.h ../include/mfilter.h
 ../bld/./stlinputsource.o: ../include/mvar.h ../include/mstring.h
 ../bld/./stlinputsource.o: ../include/mfilterlibrary.h
@@ -254,11 +261,12 @@ dep:
 ../bld/./stlinputsource.o: ../include/mtokenlists.h ../include/mutils.h
 ../bld/./stlinputsource.o: ../include/mvarlibrary.h ../include/mvarnode.h
 ../bld/./stlinputsource.o: ../include/mvarresolver.h
-../bld/./StringTableTests.o: ../include/mangopub.h ../include/marraylist.h
-../bld/./StringTableTests.o: ../include/mlist.h ../include/mcollection.h
+../bld/./StringTableTests.o: ../include/mangopub.h ../include/mrawarray.h
 ../bld/./StringTableTests.o: ../include/mobject.h ../include/mfwddefs.h
-../bld/./StringTableTests.o: ../include/mmemutils.h ../include/mbintree.h
-../bld/./StringTableTests.o: ../include/mclasses.h ../include/merror.h
+../bld/./StringTableTests.o: ../include/mmemutils.h ../include/mrawlist.h
+../bld/./StringTableTests.o: ../include/marraylist.h ../include/mlist.h
+../bld/./StringTableTests.o: ../include/mbintree.h ../include/mclasses.h
+../bld/./StringTableTests.o: ../include/mcollection.h ../include/merror.h
 ../bld/./StringTableTests.o: ../include/mfilter.h ../include/mvar.h
 ../bld/./StringTableTests.o: ../include/mstring.h ../include/mfilterlibrary.h
 ../bld/./StringTableTests.o: ../include/mfilternode.h ../include/mfreetext.h
@@ -280,11 +288,12 @@ dep:
 ../bld/./StringTableTests.o: ../include/mutils.h ../include/mvarlibrary.h
 ../bld/./StringTableTests.o: ../include/mvarnode.h ../include/mvarresolver.h
 ../bld/./StringTableTests.o: stlinputsource.h
-../bld/./TokenizerTests.o: ../include/mangopub.h ../include/marraylist.h
-../bld/./TokenizerTests.o: ../include/mlist.h ../include/mcollection.h
+../bld/./TokenizerTests.o: ../include/mangopub.h ../include/mrawarray.h
 ../bld/./TokenizerTests.o: ../include/mobject.h ../include/mfwddefs.h
-../bld/./TokenizerTests.o: ../include/mmemutils.h ../include/mbintree.h
-../bld/./TokenizerTests.o: ../include/mclasses.h ../include/merror.h
+../bld/./TokenizerTests.o: ../include/mmemutils.h ../include/mrawlist.h
+../bld/./TokenizerTests.o: ../include/marraylist.h ../include/mlist.h
+../bld/./TokenizerTests.o: ../include/mbintree.h ../include/mclasses.h
+../bld/./TokenizerTests.o: ../include/mcollection.h ../include/merror.h
 ../bld/./TokenizerTests.o: ../include/mfilter.h ../include/mvar.h
 ../bld/./TokenizerTests.o: ../include/mstring.h ../include/mfilterlibrary.h
 ../bld/./TokenizerTests.o: ../include/mfilternode.h ../include/mfreetext.h
