--- a/c/ext/Makefile
+++ b/c/ext/Makefile
@@ -44,7 +44,7 @@ LIBS            =
 
 # Implicit rule to build .o into the build directory from .c
 $(OUTPUT_DIR)/ext/%.o : %.c
-	@echo Building $@
+	@echo Building ext/$<  \-\>  $@ 
 	@$(GCC)  -std=c99 -c $(CFLAGS) $< -o $@
 
 all: base static shared
